[package]
name = "brainfuck-web"
authors = ["Tom-the-Bomb"]
description = "An online brainfuck interpreter app powered by rust and WASM"
repository = "https://github.com/Tom-the-Bomb/brainfuck-web"
license = "MIT"
version = "0.1.0"
edition = "2021"
keywords = [
    "web",
    "wasm",
    "programming-language",
    "language",
    "interpreter",
]
categories = [
    "wasm",
    "web-programming",
    "compilers",
    "parser-implementations",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2"
wee_alloc = { version = "0.4", optional = true }
brainfuck-exe = { git = "https://github.com/Tom-the-Bomb/brainfuck-rs", default-features = false }

[profile.release]
opt-level = "s"
lto = "fat"